# disjoint-unit-disk-cover

./: .clang-tidy  .gitmodules  CMakeLists.txt  DATA_LICENSE.md  README.md
examples/: concentric_points_coverable.toml  concentric_points_coverable_with_groups.toml  concentric_points_noncoverable.toml  offset_grid_44_points.toml
examples/reports/: concentric_points_coverable.report.toml  concentric_points_coverable_with_groups.report.toml  concentric_points_noncoverable.report.toml  offset_grid_44_points.report.toml
include/disjoint_unit_disk/: cli_io.hpp  enumeration.hpp  int_scaled_point.hpp  logging.hpp  search.hpp  workflow.hpp
src/: cli_io.cpp  enumeration.cpp  logging.cpp  main.cpp  search.cpp  workflow.cpp
tests/: test_cli_io.cpp  test_enumeration.cpp  test_primitives.cpp  test_search.cpp  test_workflow.cpp
tools/: generate_examples.py  requirements.txt
